--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "nodemailer": "^4.6.4",
     "passport": "^0.4.0",
     "passport-local": "^1.0.0",
-    "passport-local-mongoose": "^5.0.0"
+    "passport-local-mongoose": "^5.0.0",
+    "request": "^2.85.0"
   }
 }
