--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "ejs": "^2.5.9",
     "express": "^4.16.3",
     "express-session": "^1.15.6",
+    "locus": "^2.0.1",
     "method-override": "^2.3.10",
     "moment": "^2.22.1",
     "mongoose": "^5.0.17",
